[package]
name = "braid-db"
version = "0.1.0"
authors = ["Seph Gentle <me@josephg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
tide = "0.15.0"
serde = "1.0.122"
serde_json = "1.0.61"
base64 = "0.13.0"