[package]
name = "braid-db"
version = "0.1.0"
authors = ["Seph Gentle <me@josephg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#lto = "fat"
#codegen-units = 1

[dependencies]
async-std = "1.9.0"
tide = "0.15.1"
serde = "1.0.122"
serde_json = "1.0.61"
base64 = "0.13.0"
pin-project-lite = "0.2.4"
chrono = "0.4.19"
#futures-lite = "1.11.3"
#async-trait = "0.1.42"

# Not (yet) used
smallvec = "1.6.1"
